--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7,8 +7,10 @@ body {
 }
 h1 {
   font-size: 2.5em;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
 }
+
+/*index*/
 #searchInput {
   width: 50%;
   padding: 10px;
@@ -55,6 +57,18 @@ footer {
   width: 100%;
 }
 
+#links-box {
+  text-align: center;
+  margin: flex;
+  padding: 10px;
+}
+
+.links {
+  padding: 10px;
+  margin: auto;
+}
+
+/*station*/
 .circle {
   width: 20px;
   height: 20px;
@@ -103,6 +117,7 @@ footer {
   font-weight: bold
 }
 
+/*prediction*/
 @font-face {
   font-family: 'Repetition-Scrolling';
   src: url(repet___.ttf);
