reduced number of API calls to be made for better efficiency

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,9 @@
 </div>
 <ul id="searchResults"></ul>
 <footer>
-  Created by AJ Dybacki | All time predictions provided by the MBTA
+  MBTA Station Clocks is an independent project and is not affiliated with or
+  endorsed by the Massachusetts Bay Transportation Authority (MBTA)
+  <br />Transit data provided by the MBTA | Created by AJ Dybacki
 </footer>
 <script src="../static/scripts/index.js"></script>
 {% endblock %}
