updated contact info

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
 <footer>
   MBTA Station Clocks is an independent project and is not affiliated with or
   endorsed by the Massachusetts Bay Transportation Authority (MBTA)
-  <br />Transit data provided by the MBTA | Created by AJ Dybacki
+  <br />Transit data provided by the MBTA | Contact info: adybacki04@gmail.com
 </footer>
 <script src="../static/scripts/index.js"></script>
 {% endblock %}
